Added instructions to exams

--- a/exam.tex
+++ b/exam.tex
@@ -35,9 +35,31 @@
 \setlength\columnsep{0pt}
 
 \begin{document}
+\begin{center}
+  \huge
+
+  Consistency Test
+\end{center}
+
+\begin{center}
+  \itshape
+  
+Bactrians and camels: A verification and meta-analysis of the supposed double hump in Computer Science  
+\end{center}
+
+\noindent Respondent:
+
+This is a consistency test in order to correlate the result of your performance in this test to actual real world programming. Please take as much time as you require to finish this; this isn't a test of speed but rather understanding. No instructions will be provided on how to analyze the questions; this is pure ``gut feeling.'' Your cooperation will be appreciated.
+
+\noindent Thank you, \\
+Almirante, Anthony Loy A. \\
+Cabellon, Luc T. \\
+Ouano, Adrian Parvin D.
+
 \begin{questions}
 \vspace{1cm}  \begin{minipage}[t][][t]{0.18\textwidth}
     \question \bf Read the following statements and mark all correct answers in the next column: \raggedright
+
     \begin{lstlisting}
 int a=10;
 int b=20;
