Added more entries to the bibliography database

--- a/Research.bib
+++ b/Research.bib
@@ -1,3 +1,43 @@
+@book{bornat1986programming,
+  title={Programming from First Principles},
+  author={Bornat, Richard},
+  year={1986},
+  publisher={Pearson Education Limited}
+}
+
+@article{murnane1993psychology,
+  title={The psychology of computer languages for introductory programming courses},
+  author={Murnane, John S},
+  journal={New Ideas in Psychology},
+  volume={11},
+  number={2},
+  pages={213--228},
+  year={1993},
+  publisher={Elsevier}
+}
+
+@article{johnson1978psychology,
+  title={The psychology of syllogisms},
+  author={Johnson-Laird, Philip N and Steedman, Mark},
+  journal={Cognitive psychology},
+  volume={10},
+  number={1},
+  pages={64--99},
+  year={1978},
+  publisher={Academic Press}
+}   
+
+@article{mccracken2001multi,
+  title={A multi-national, multi-institutional study of assessment of programming skills of first-year CS students},
+  author={McCracken, Michael and Almstrum, Vicki and Diaz, Danny and Guzdial, Mark and Hagan, Dianne and Kolikant, Yifat Ben-David and Laxer, Cary and Thomas, Lynda and Utting, Ian and Wilusz, Tadeusz},
+  journal={ACM SIGCSE Bulletin},
+  volume={33},
+  number={4},
+  pages={125--180},
+  year={2001},
+  publisher={ACM}
+}
+
 @article{dehnadi2006camel,
   title={The camel has two humps (working title)},
   author={Dehnadi, Saeed and Bornat, Richard},
@@ -9,7 +49,7 @@
 @inproceedings{bornat2008mental,
   title={Mental models, consistency and programming aptitude},
   author={Bornat, Richard and Dehnadi, Saeed and others},
-  booktitle={Proceedings of the tenth conference on Australasian computing education},
+  booktitle={{Proceedings of the tenth conference on Australasian computing education}},
   volume={78},
   pages={53--61},
   year={2008},
@@ -33,7 +73,8 @@
   publisher={Informing Science Institute}
 }
 
-@electronic{bricklin,
+@electronic{bricklin2002,
+ date = {2002},
  author = {Bricklin, Dan},
  title = {Why {J}ohnny can't program},
  url = {http://www.bricklin.com/wontprogram.htm},
@@ -59,7 +100,7 @@
 @inproceedings{chalk2003improving,
   title={Improving pass rates in introductory programming},
   author={Chalk, Peter and Boyle, Tom and Pickard, Poppy and Bradley, Claire and Jones, Ray and Fisher, Ken},
-  booktitle={Proceedings of the 4th Annual LTSN-ICS Conference},
+  booktitle={{Proceedings of the 4th Annual LTSN-ICS Conference}},
   pages={6--10},
   year={2003}
 }
@@ -67,7 +108,7 @@
 @inproceedings{karahasanovic2007difficulties,
   title={Difficulties experienced by students in maintaining object-oriented systems: an empirical study},
   author={Karahasanovi{\'c}, Amela and Thomas, Richard C.},
-  booktitle={Proceedings of the ninth Australasian conference on Computing education},
+  booktitle={{Proceedings of the ninth Australasian conference on Computing education}},
   volume={66},
   pages={81--87},
   year={2007},
@@ -91,7 +132,7 @@
 @inproceedings{caspersen2007mental,
   title={Mental models and programming aptitude},
   author={Caspersen, Michael E and Larsen, Kasper Dalgaard and Bennedsen, Jens},
-  booktitle={ACM SIGCSE Bulletin},
+  booktitle={{ACM SIGCSE Bulletin}},
   volume={39},
   number={3},
   pages={206--210},
