--- a/Research.org
+++ b/Research.org
@@ -1,9 +1,13 @@
 # #+OPTIONS: toc:nil
 #+latex_header_extra: \newglossaryentry{equalitysymbol}{name={equality symbol},description={(=)}}
 
-#+TITLE: Bactrians and camels:
-#+TITLE: A verification and meta-analysis of the supposed 
+#+TITLE: Bactrians and camels
+#+TITLE: A verification and meta-analysis of the supposed
 #+TITLE: double hump in Computer Science
+#+TITLE: in University of San Carlos -- Talamban Campus
+#+TITLE: Grade 12
+
+
 # #+TITLE: Are there bactrians or dromedaries in University of San Carlos:
 # #+TITLE: Verification and meta-analysis of the supposed double hump in Computer
 # #+TITLE: Science
@@ -13,6 +17,7 @@
 
 #+LATEX_CLASS_OPTIONS: [12pt]
 #+LATEX_HEADER: \newif\ifexport
+#+LATEX_HEADER: \usepackage[final]{pdfpages}
 #+LATEX_HEADER: \usepackage[margin=1in]{geometry}
 #+LATEX_HEADER: \usepackage[natbibapa]{apacite}
 #+LATEX_HEADER: \usepackage{usebib}
@@ -33,14 +38,16 @@
 # Must check if it is an article or a book. Books are italicized while articles aren't.
 
 #+LATEX_HEADER_extra: \newglossaryentry{multimodal}{name={multimodal},description={Refers to having more than one hump(the \gls{mode})}}
+#+LATEX_HEADER_extra: \newglossaryentry{bimodal}{name={bimodal},description={Refers to having exactly two humps(the \gls{mode}). A special case of \gls{multimodal}}}
 #+LATEX_HEADER_extra: \newglossaryentry{normal}{name={normal},description={A curve that can be defined by its standard deviation and mean}}
 #+LATEX_HEADER_extra: \newglossaryentry{consistencytest}{name={consistency test},description={A test administered to confirm if the participant has consistent answers on similar topics}}
-#+LATEX_HEADER_extra: \newglossaryentry{mathematicalequality}{name={mathematical equality},description={\texttt{x = y}, means that we can substitute all \texttt{x}s in the code for \texttt{y}s and vice versa. Also known as \textit{referential equality}.\\\textit{In the study:} It contrasts with \gls{assignment}}}
+#+LATEX_HEADER_extra: \newglossaryentry{mathematicalequality}{name={mathematical equality},description={\texttt{x = y}, means that one can substitute all \texttt{x}s in the code for \texttt{y}s and vice versa. Also known as \textit{referential equality}.\\\textit{In the study:} It contrasts with \gls{assignment}}}
 #+LATEX_HEADER_extra: \newglossaryentry{assignment}{name={assignment},description={\texttt{x = y} means that \texttt{y} is \gls{evaluated}, and \texttt{x} is set to the result.\\\textit{In the study:} It is used as the paradigm by \cite{dehnadi2006camel}, and contrasts with \gls{mathematicalequality}}}}
 #+LATEX_HEADER_extra: \newglossaryentry{unimodal}{name={unimodal},description={Having a single hump(\gls{mode})}}
 #+LATEX_HEADER_extra: \newglossaryentry{modality}{name={modality},description={The amount of \glspl{mode} in the statistics. (See \gls{multimodal} and \gls{unimodal})}}
 #+LATEX_HEADER_extra: \newglossaryentry{mode}{name={mode},description={Local maxima}}
 #+LATEX_HEADER_extra: \newglossaryentry{evaluated}{name={evaluated},description={Run a piece of code}}
+#+LATEX_HEADER_extra: \newglossaryentry{institution}{name={institution},description={Specifically, educational institutions; e.g. universities}}
 
 #+LATEX_HEADER: \fancypagestyle{plain}{
 #+LATEX_HEADER: \fancyhf{}
@@ -66,7 +73,10 @@
 
 #+LATEX: \clearpage
 #+LATEX: \pagestyle{fancy}
+# #+LATEX: \twocolumn
+# #+LATEX: \ifexport\onecolumn\fi
 * Introduction
+** Background of the Study
 #+BEGIN_quote
 The camel has a single hump; The dromedary, two; Or else the other way
 around, I'm never sure. Are you?
@@ -74,31 +84,35 @@ around, I'm never sure. Are you?
 -- Ogden Nash
 #+END_quote
 
-It is undeniable that mistakes happen all the time! People were
-mistaken and believed that the camels' humps functioned as storage of
-water. Just as it was a common misconception that the function of the
-camels' humps, one can not deny that cite:dehnadi2006camel may have
-also been mistaken in their research with respect to the existence of
-double hump with respect to Computer Science[fn::The researchers would
-just like to emphasize that Computer Science and Computer Programnming
-are /distinct/; however, with exception to special cases, Computer
-Programming is a prerequisite to Computer Science] Education. It would
-be everyone's best interest if it does not exist as this implies that
-with proper education and motivation, everyone can indeed program.
+Mistakes happen all the time. 
+People were mistaken and believed that the camels' humps functioned as storage of water. 
+As members of the society, it is our duty to debunk misconceptions 
+that have been spread as gossip and hearsay.
+Just as it was a common misconception that the function of the camels' humps,
+cite:dehnadi2006camel may have also been mistaken in their research
+with respect to the existence of double hump with respect to Computer Science[fn::
+The researchers would just like to emphasize that Computer Science and Computer Programming are /distinct/; 
+however, with exception to special cases, Computer Programming can be considered a prerequisite to Computer Science] 
+Education. 
+citep:bornat2014camels,bornat2008mental claim that 
+it is widely believed between computer science professors that 
+there are just some people who can't program.
+The researchers disagree with that sentiment, as anecdotally, 
+many of the Electronic and Communications Engineering students that they had encountered 
+at least had the ability to understand and modify code; 
+this may be linked to Electronics and Communications Engineering having the tendency to just ``accept'' the rules, 
+however, this is purely speculation. 
+The ability to accept rules without clear reasoning is
+one of the requirements in programming according to cite:dehnadi2006camel.
+It would be everyone's best interest if it does not exist as 
+this implies that with proper education and motivation, 
+everyone can indeed program. 
+However, if it were true, this would imply that both glspl:institution and students 
+can both benefit as preliminary screening could be performed 
+in order to avoid wasting time and resources on both parties.
 
-** Background of the Study
-It is widely believed between computer science professors that there
-are just some people who can't program
-citep:bornat2014camels,bornat2008mental. The researchers disagree with
-that sentiment, as anecdotally, many of the Electronic and
-Communications Engineering students that they had encountered at least
-had the ability to understand and modify the code; this may be linked
-to Electronics and Communications Engineering having the tendency to
-just ``accept'' the rules, however, this is purely speculation. The
-tendency to be able to accept rules without clear reasoning was one of
-the requirements in programming according to cite:dehnadi2006camel.
 # TODO: more stuff
-Furthermore, if the statements were actually true, 
+# Furthermore, if the statements were actually true, 
 
 # As
 # further informal proof, quite often, experienced programmers often
@@ -107,85 +121,71 @@ Furthermore, if the statements were actually true,
 # TODO: Something
 
 ** Statement of the Problem
-Can the students' performance be accurately predicted by the
-[[glspl:consistencytest][consistency tests]] deviced by the researchers and by
-cite:dehnadi2006camel?
+Can the students' performance be accurately predicted by the [[glspl:consistencytest][consistency tests]] 
+deviced by the researchers and by cite:dehnadi2006camel?
+
 Specifically, the following questions are investigated:
-  1. Do all glspl:consistencytest have the same result?
-     1. Do they result in the same modality?
-        - H_a :: The statistical methods significantly differ in gls:modality.
-        - H_0 :: The statistical method do not differ in gls:modality.
-  2. Is the result of the consistency test produced by
-     cite:dehnadi2006camel replicable in University of San Carlos
-     Talamban Campus?
-      - H_a :: There are multiple observable humps which means that
-               the distribution is gls:multimodal
-      - H_0 :: There is a single observable hump which means that the
-               distribution is gls:unimodal
-  3. Do the students form a mental model in order to be able to answer the question?
-     1. If so, do those who had formed a mental model perform better in the examinations?
-       - H_a :: There is a regression between the [[gls:consistencytest][consistency test]]
-              results and the examinations.
-       - H_0 :: There is no regression between the [[gls:consistencytest][consistency test]]
-              results and the examinations.
+  1. Is the result of the consistency test produced by cite:dehnadi2006camel
+      replicable in University of San Carlos Talamban Campus?
+      - H_a2 :: There are multiple observable humps which means that the distribution is gls:multimodal
+      - H_a1 :: There are two observable humps which means that the distribution is gls:multimodal
+      - H_0 :: There is a single observable hump which means that the distribution is gls:unimodal
+  2. Do the different glspl:consistencytest show similar results?
+     - H_a :: The statistical methods significantly differ in gls:modality.
+     - H_0 :: The statistical method do not significantly differ in gls:modality.
+  3. Does the formation of a mental model result in better performance in actual programming tasks?
+     - H_a :: There is a regression between the [[gls:consistencytest][consistency test]]
+            results and the actual programmign tasks.
+     - H_0 :: There is no regression between the [[gls:consistencytest][consistency test]]
+              results and the actual programmign tasks.
 
 ** Literature Review
 The focus of the review lies on citetitle:dehnadi2006camel as this
-paper aims to be a derivative work.
+paper is a derivative work.
 *** citetitle:dehnadi2006camel
-The researchers found the use of the gls:equalitysymbol in the test
-quite questionable; in fact, cite:dehnadi2006camel had specifically
-stated ``[W]e normally excoriate this appalling design decision'' and
-further added that it was, to borrow their words, ``crass idiocy'';
-the first statement is once again repeated in citep:bornat2008mental.
-It is possible that they continued to use that for the following
-reasons, (a) to test if they can gls:decouple their previous learning, and
-(b) in order to actually test if they would be able to understand
-actual programming. To add to the confusion, in the test choices, they
-also continued to use the gls:equalitysymbol. Another thing to note
-would be that some programming languages (e.g. Haskell[fn::However,
-the bound variable still remains to be declared at the
-left-hand-side.]), actually do have gls:mathematicalequality as the
-ndefinition of the gls:equalitysymbol. As the test isn't available at
-the time of writing; the online test developed by cite:onlinetest will
-serve as the basis of the the paper test which will is attached as [[Appendix A][Appendix A]].
+The researchers found the use of the gls:equalitysymbol in the test quite questionable; 
+in fact, cite:dehnadi2006camel had also acknowledged this and specifically stated 
+``[W]e normally excoriate this appalling design decision'' 
+and further added that it was, to borrow their words, ``crass idiocy'';
+the first statement is once again repeated in citep:bornat2008mental. 
+The researchers speculate that they continued to use that for the following reasons, 
+(a) to test if they can gls:decouple their previous learning, and
+(b) in order to actually test if they would be able to understand actual programming. 
+To add to the confusion, they also continued to use the gls:equalitysymbol in the test choices,
+which means gls:mathematicalequality rather than gls:assignment.
+Another thing to note is that some programming languages 
+(e.g. Haskell[fn::However, the bound variable still remains to be declared at the left-hand-side.]), 
+actually do have gls:mathematicalequality as the definition of the gls:equalitysymbol. 
+As the test isn't available at the time of writing; 
+the online test developed in cite:onlinetest will serve as the basis of the the paper test which will is attached as [[Appendix A][Appendix A]].
 
 # Aside from simple graphical analysis, there has been no mention of a
 # bimodality test.
 
 *** citetitle:bornat2008mental
-Bornat [[cite:bornat2008mental][1986, as cited in::]] chose to teach
-programming by way of formal reasoning. If expert programmers could
-justify their programs, perhaps novices could be taught to program by
-first learning to formalise their reasoning. Other researchers, used
-another approach that involved studying the problems encountered by
-novice programmers, either categorising the problems explicitly and
-discovering that they fall into a handful of types
-[[cite:bornat2008mental][Bonar & Soloway, 1983, as cited in::]] There
-are researchers that such as Murnane [[cite:bornat2008mental][1993, as
-cited in::]] related programming to psychological theories,
-specifically Chomsky’s notion of natural language acquisition and
-Piaget’s theories of education. Johnson-Laird & Steedman
-[[cite:bornat2008mental][1978, as cited in::]] implemented the theory
-in a computer program that made deductions from singly-quantified
-assertions, and its predictions about the relative difficulty of such
-problems were strikingly confirmed: the greater the number of models
-that have to be constructed in order to draw the correct conclusion,
-the harder the task.
+cite:bornat2008mental stated in his paper that 
+a significant number of novice computer programmers have never learned to program during their University course;
+this sentiment is supported by cite:mccracken2001multi. 
+He then further state that he chose to teach programming by way of formal reasoning [[cite:bornat2008mental][Bornat, 1986 cited in::]]
+If expert programmers could justify their programs, 
+perhaps novices could be taught to program by first learning to formalise their reasoning. 
+Examples of which is by reading books on programming languages, analytical thinking and reasoning. 
+Reading plenty of resources on programming language and algorithms. 
+cite:murnane1993psychology related programming to psychological theories, 
+specifically Chomsky’s notion of natural language acquisition and Piaget’s theories of education.
 
 *** citetitle:bornat2014camels
 cite:bornat2014camels states in his paper that during the creation of
 citep:dehnadi2006camel, he was experiencing depression. This resulted
 in a confirmation bias that there are students that really could not
 learn. However, implications can be found all around the paper that
-they believe that their prior claims were not completely invalid; very
-clear examples would be citing
-researches[[cite:bornat2014camels][Bornat, Dehnadi, & Simon, 2008;
+they believe that their prior claims were not completely invalid; 
+a very clear example would be in his own words, 
+``I believe that the problem is real but that we don’t understand its causes'' (p. 1)
+Furthemore, he cites other researches[[cite:bornat2014camels][Bornat, Dehnadi, & Simon, 2008;
 Dehnadi, 2009; Caspersen, Larsen, & Bennedsen, 2007, all cited in::]]
-that used the testing methods and in his own words, ``I believe that
-the problem is real but that we don’t understand its causes''
-(p. 1). This leads the researchers to be compelled to continue where
-they left off.
+that use the testing methods they had developed. 
+This leads the researchers to be compelled to continue where they left off.
 
 *** Synthesis
 The similarity of the studies conducted by cite:dehnadi2006camel and
@@ -206,16 +206,36 @@ citing different researches that used the said testing methods,
 getting them to the decision to continue what the researchers started.
 
 *** Other studies
-cite:bricklin provides some reasons why some people can't program.
-cite:chalk2003improving gives examples on how to implement a
-curriculum with a significant pass rate. 
-** Importance of the Study
-Just like our predecessors, cite:dehnadi2006camel, this research paper
-aims to be able to quantitatively evaluate the students' understanding
-of programming. However, cite:ford2010assessing also demonstrated an
-alternative importance where one assesses not the students but rather
-the effectiveness of the curriculum of a given course.
+cite:bricklin2002 made an informal synthesis and concluded with the following: 
+(a) immediately observable results are easier to grok; 
+(b) less amount of instructions are easier to understand; 
+(c) instructions that have a clear effect on the results tend to be more engaging.
+Point c might have an implication on this study: 
+the gls:equalitysymbol in cite:dehnadi2006camel was used in 2 contexts;
+this might cause confusion within the respondents producing worse results.
 
+cite:chalk2003improving created a major change in the curriculum and learning environment.
+One of those changes were adding interactive visualization on abstract topics;
+this contrasts with claims of cite:dehnadi2006camel that different paradigms had been attempted yet 
+none resulted in any significant improvement.
+
+** Importance of the Study
+Just like our predecessors, cite:dehnadi2006camel, 
+this research paper aims to quantitatively evaluate the students' understanding of programming. 
+An alternative importance was demonstrated where 
+one assesses not the students but rather the effectiveness of the curriculum of a given course
+such as in the case of cite:ford2010assessing.
+The success of this study is beneficial whether or not 
+the consistency test developed by citeauthor:dehnadi2006camel does have predictive capabilities.
+
+If consistency test results do not correlate with programming capabilities,
+this hints but not conclusively implies that anyone can be a programmer; specifically, 
+this might be beneficial to the industry as programmers are often in demand;
+online, there is a general consensus that skilled programmers are deficit.
+
+However, if there a correlation does exist, 
+both the gls:institution and the students benefit in terms of time and resources.
+Glspl:institution will be able to focus the workforce on those who have a higher guarantee of learning.
 
 # As our world tends to get deeper into technology, knowledge of
 # computers start to become indispensible. Even way back in 1990s,
@@ -223,32 +243,35 @@ the effectiveness of the curriculum of a given course.
 # Engineering.
 
 ** Scope and Delimitation
-The population of the study is constrained only to the students of
-University of San Carlos; this is not due to resource constraint, but
-instead, the researchers are only interested in the performances of
-University of San Carlos students.  The interest stems from the idea
-that University of San Carlos offers not only Information Technology
-but also Electronic and Communications Engineering which has close
-ties with Computer Programming such as in the case of Icarus Verilog
-citep:iverilog, which is a [[gls:hdl][hardware description language]].
+The population of the study is constrained only to the Grade 12 Senior High School students of University of San Carlos; 
+this is not due to time and resource constraint, but instead, 
+the researchers are only interested in the performances of the Grade 12 students since
+# TODO: fix
+after graduation from Senior High, they'll have to choose their courses; and
+the researchers are specifically targetting University of San Carlos since 
+not only is Information Technology and Computer Science taught here,
+but also Electronic and Communications Engineering 
+which has close ties with Computer Programming
+such as in the case of Icarus Verilog citep:iverilog, 
+which is a [[gls:hdl][hardware description language]].
 
-As in citep:dehnadi2006camel, some of the participants are expected to
+As had been observed by citep:dehnadi2006camel, 
+some of the participants are expected to
 decline either due to lack of free time or even simple disinterest.
 The former can become a problem due to a possible bias in the results,
 specifically that our population will be skewed to those who are
 interested in Computer Science.
 
-Furthermore, although this paper explores the effects of different
-representations of programming, it is not a tool to locate which
-programming concepts students have problems with. As such, the
-findings of this research should not be used to research to determine
-what the strengths and weakness of the teaching curricula are; rather,
+Furthermore, although this paper explores the effects of different representations of programming, 
+it is not within the scope of the study to identify which programming concepts are difficult to understand. 
+As such, the findings of this research should not be used to research to 
+dissect teaching curricula into their strengths and weakness; rather, 
 it should only be used to quantify its effectiveness.
 
-Finally, as this is a derivative of the work done by
-cite:dehnadi2006camel, our focus lies on two things: first, the
-research aims to administer different testing method and compared it
-with their methods.
+Finally, as a derivative of the work of the study by cite:dehnadi2006camel, 
+the focus lies on two things: 
+first, the research aims to assess students with different testing methods and 
+next, compared the regression of the different testing methods to one another.
 # the resulting [[gls:modality][modality]] of the tests administered
 # and most importantly, to see if the different testing methods result
 # in an offset.
@@ -279,45 +302,66 @@ with their methods.
 
 * Methodology
 ** Research Design
-The researchers will conduct multiple experiments which include
-different paradigms in programming. The paradigms that are explored
-are the following: flowcharting, visual, textual, etc. Afterwards, the
-participants of the paper survey will once again be sampled from in
-order to conduct the electronic survey. The paper survey only assesses
-the underlying model of programming while the electronic survey is
-done in order to actually assess one's capabilities in proramming.
+The design is experimental and correlational in nature.  
+The researchers will conduct multiple experiments which include different paradigms in programming. 
+Afterwards, the participants of the paper survey will once again be sampled from in order to conduct the electronic survey. 
+The paper survey only assesses the underlying model of programming while 
+the electronic survey is done in order to actually assess one's capabilities in proramming.
 
 ** Participants and Sampling Technique
-Groups of students will be randomly sampled from both Senior High
-School students and College students of University of San Carlos:
-Talamban Campus. They will be surveyed through a paper medium after
-given very simple rules. The researchers will analyze the results of
-those that are (a) in the first years in Computer Science, in the
-successive years, (b) in Computer Science, or (c) in a different
-course and/or no interest in Computer Science. There will be two
-passes of stratified sampling. The first pass is done on the whole
-population of students from University of San Carlos, while the second
-pass is done only on the participants of the participants of the paper
-survey. The population of the electronic task is the participants
-of the first task.
+Fifty samples each are taken for the different examinations. 
+There are 9 blocks in University of San Carlos -- Talamban Campus.
+Both random and non-random sampling techniques are performed. 
+Firstly, stratified sampling with the strata as the Grade 12 blocks in University of San Carlos -- Talamban Campus is performed; 
+this is followed by a quota sampling with 5 to 6 students per block.
+The respondents of the consistency test are then stratified according to the results
+and a second pass of stratified sampling is performed.
+
+# The researchers will analyze the results of those
+# that are (a) in the first years in Computer Science, in the successive
+# years, (b) in Computer Science, or (c) in a different course and/or no
+# interest in Computer Science. There will be two passes of stratified
+# sampling. The first pass is done on the whole population of students
+# from University of San Carlos, while the second pass is done only on
+# the participants of the participants of the paper survey. The
+# population of the electronic task is the participants of the first
+# task.
 
 ** Research Instrument
-The data collection requires 2 instruments, first, a paper survey is
-required. The contents of the paper survey is located in Appendices
-A,B,C... Afterwards, an electronic task of actual programming is
-conducted. The contents is located in Appendices D....
+The data collection requires 2 instruments. 
+First, a paper survey is conducted; 
+the contents of the paper survey is attached as Appendices [[Appendix A][A]] and [[Appendix B][B]].
+Afterwards, an electronic task of actual programming is conducted;
+the contents of the electronic task is attached as [Appendix C][Appendix C].
 
 ** Data Gathering Procedure
-The researchers will distribute the paper survey to each classroom
-that is included in the population. Once the results of the paper
-survey is analyzed, a new strata, passing and non-passing is formed,
-and another pass of stratified sampling is performed for the
-electronic exams.
+The researchers will distribute the paper survey to each classroom that is included in the population. 
+Once the results of the paper survey is analyzed, a new strata, passing and non-passing is formed,
+and another pass of stratified sampling is performed for the electronic exams.
 
 ** Data Analysis
-The \chi^2-test will be used in order to verify the amount of
-categories(passing and nonpassing, and good and bad in
-programming).
+# TODO: add contingency table to gls
+The \chi^2-test of independence is performed to verify that 
+the model forms a 2x2 contingency table 
+with the rows as passing and failing the consistency test,
+and the columns as being able to actually perform programming.
+
+Once the dependence of the data is confirmed, 
+the data is then checked for regression through logistical regression.
+A positive linear regression between passing the test and being able to perform programming confirms that 
+the phenomenon observed by cite:dehnadi2006camel holds true in University of San Carlos -- Talamban Campus.
+
+Tabularly, it should look like [[Hypothesized][Table 1]].
+
+#+label: Hypothesized
+#+caption: Hypothesized table data
+#+attr_latex: :align |c|c|
+|----------------+----------------- |
+| +Pass but Bad+ | Pass and Good   |
+|----------------+-----------------|
+| Fail and Bad   | +Fail but Good+ |
+|----------------+-----------------|
+
 
 # * Meta-analysis
 
@@ -330,10 +374,19 @@ programming).
 bibliography:Research.bib
 bibliographystyle:apacite
 
-* Appendix A
+\clearpage
+
+
+* Appendices
+** Appendix A
+# #+LATEX: \includepdf[pages=-,pagecommand={},width=\textwidth]{exam.pdf}
+
+** Appendix B
+# #+LATEX: \includepdf[pages=-,pagecommand={},width=\textwidth]{exam2.pdf}
 
 # Local Variables:
 # mode: org
 # org-latex-pdf-process: ("xelatex -interaction nonstopmode -output-directory %o %f" "bibtex %b"  "makeglossaries %b" "xelatex -interaction nonstopmode -output-directory %o %f" "xelatex -interaction nonstopmode -output-directory %o %f")
+# org-latex-table-caption-above: nil
 # DISABLED: org-latex-pdf-process: ("pdflatex -interaction nonstopmode -output-directory %o %f" "bibtex %b" "makeglossaries %b" "pdflatex -interaction nonstopmode -output-directory %o %f" "pdflatex -interaction nonstopmode -output-directory %o %f")
 # End:
