--- a/Research.tex
+++ b/Research.tex
@@ -1,4 +1,4 @@
-% Created 2017-10-14 Sat 20:57
+% Created 2017-10-17 Tue 00:49
 % Intended LaTeX compiler: pdflatex
 \documentclass[12pt]{article}
 \usepackage[utf8]{inputenc}
@@ -99,9 +99,9 @@
 \clearpage
 \pagestyle{fancy}
 \section{Introduction}
-\label{sec:org312d646}
+\label{sec:orgda1a6c7}
 \subsection{Background of the Study}
-\label{sec:org58a4495}
+\label{sec:org489662f}
 \begin{quote}
 The camel has a single hump; The dromedary, two; Or else the other way
 around, I'm never sure. Are you?
@@ -136,7 +136,7 @@ can both benefit as preliminary screening could be performed
 in order to avoid wasting time and resources on both parties.
 
 \subsection{Statement of the Problem}
-\label{sec:org14ef6d5}
+\label{sec:orgfdfd07a}
 Can the students' performance be accurately predicted by the \glspl{consistencytest} 
 deviced by the researchers and by \cite{dehnadi2006camel}?
 
@@ -150,11 +150,11 @@ Specifically, the following questions are investigated:
 \end{enumerate}
 
 \subsection{Literature Review}
-\label{sec:org98bdcd8}
+\label{sec:org0c0c2b3}
 The focus of the review lies on \citetitle{dehnadi2006camel} as this
 paper is a derivative work.
 \subsubsection{\citetitle{dehnadi2006camel}}
-\label{sec:org877a0c8}
+\label{sec:org32c3c7d}
 The researchers found the use of the \gls{equalitysymbol} in the test quite questionable; 
 in fact, \cite{dehnadi2006camel} had also acknowledged this and specifically stated 
 ``[W]e normally excoriate this appalling design decision'' 
@@ -169,10 +169,10 @@ Another thing to note is that some programming languages
 (e.g. Haskell\footnote{However, the bound variable still remains to be declared at the left-hand-side.}), 
 actually do have \gls{mathematicalequality} as the definition of the \gls{equalitysymbol}. 
 As the test isn't available at the time of writing; 
-the online test developed in \cite{onlinetest} will serve as the basis of the the paper test which will is attached as \hyperref[sec:orgf107c97]{Appendix A}.
+the online test developed in \cite{onlinetest} will serve as the basis of the the paper test which will is attached as \hyperref[sec:org6a8f1f8]{Appendix A}.
 
 \subsubsection{\citetitle{bornat2008mental}}
-\label{sec:org18045dc}
+\label{sec:org0d9d8f0}
 \cite{bornat2008mental} stated in his paper that 
 a significant number of novice computer programmers have never learned to program during their University course;
 this sentiment is supported by \cite{mccracken2001multi}. 
@@ -185,7 +185,7 @@ Reading plenty of resources on programming language and algorithms.
 specifically Chomsky’s notion of natural language acquisition and Piaget’s theories of education.
 
 \subsubsection{\citetitle{bornat2014camels}}
-\label{sec:org97b4cdd}
+\label{sec:orgc49fb39}
 \cite{bornat2014camels} states in his paper that during the creation of
 \citep{dehnadi2006camel}, he was experiencing depression. This resulted
 in a confirmation bias that there are students that really could not
@@ -199,7 +199,7 @@ that use the testing methods they had developed.
 This leads the researchers to be compelled to continue where they left off.
 
 \subsubsection{Synthesis}
-\label{sec:org0b2df0d}
+\label{sec:orgd589b95}
 The similarity of the studies conducted by \cite{dehnadi2006camel} and
 \cite{bornat2008mental} was that both tested the teaching approaches of
 the researchers to novices or amateur programmers, and whether if
@@ -218,7 +218,7 @@ citing different researches that used the said testing methods,
 getting them to the decision to continue what the researchers started.
 
 \subsubsection{Other studies}
-\label{sec:org6bf2fc4}
+\label{sec:org8fd5370}
 \cite{bricklin2002} made an informal synthesis and concluded with the following: 
 (a) immediately observable results are easier to grok; 
 (b) less amount of instructions are easier to understand; 
@@ -233,7 +233,7 @@ this contrasts with claims of \cite{dehnadi2006camel} that different paradigms h
 none resulted in any significant improvement.
 
 \subsection{Importance of the Study}
-\label{sec:org04d9945}
+\label{sec:orgbce010f}
 Just like our predecessors, \cite{dehnadi2006camel}, 
 this research paper aims to quantitatively evaluate the students' understanding of programming. 
 An alternative importance was demonstrated where 
@@ -252,7 +252,7 @@ both the \gls{institution} and the students benefit in terms of time and resourc
 \Glspl{institution} will be able to focus the workforce on those who have a higher guarantee of learning.
 
 \subsection{Scope and Delimitation}
-\label{sec:org3bcc2f4}
+\label{sec:org021fdd1}
 The population of the study is constrained only to the Grade 12 Senior High School students of University of San Carlos; 
 this is not due to time and resource constraint, but instead, 
 the researchers are only interested in the performances of the Grade 12 students since
@@ -292,14 +292,14 @@ next, compared the regression of the different testing methods to one another.
 \printglossaries
 
 \section{Methodology}
-\label{sec:org0fab3d7}
+\label{sec:orgc8d1077}
 \subsection{Research Design}
-\label{sec:org58fe366}
+\label{sec:orgfb0af84}
 The design is experimental and correlational in nature.  
 The researchers will conduct multiple experiments which include different paradigms in programming. 
 
 \subsection{Participants and Sampling Technique}
-\label{sec:orga7a4118}
+\label{sec:org5edf992}
 Fifty samples each are taken for the different examinations. 
 There are 9 blocks in University of San Carlos -- Talamban Campus.
 Both random and non-random sampling techniques are performed. 
@@ -307,16 +307,16 @@ Stratified sampling with the strata as the Grade 12 blocks in University of San 
 which is followed by a quota sampling with 5 to 6 students per block.
 
 \subsection{Research Instrument}
-\label{sec:orga9a9a1f}
+\label{sec:org3595987}
 A paper survey is conducted; 
-the contents of the paper survey is attached as Appendices \hyperref[sec:orgf107c97]{A} and \hyperref[sec:orgc1ee00a]{B}.
+the contents of the paper survey is attached as Appendices \hyperref[sec:org6a8f1f8]{A} and \hyperref[sec:org8500dc1]{B}.
 
 \subsection{Data Gathering Procedure}
-\label{sec:orge19ca97}
+\label{sec:orgfda1532}
 The researchers will distribute the paper survey to each classroom that is included in the population. 
 
 \subsection{Data Analysis}
-\label{sec:orgce9507a}
+\label{sec:orgd854143}
 The \(\chi^{\text{2}}\)-test of independence is performed to verify that 
 the model forms a 3x2 contingency table 
 with the rows as passing and failing the consistency test,
@@ -324,11 +324,11 @@ and the columns as the equality symbol and the arrow symbol.
 
 
 \section{Results and Discussion}
-\label{sec:org474ced4}
+\label{sec:orga110f93}
 Although 101 consistency tests were sent out, only 37 were returned.
 
 \begin{table}[htbp]
-\caption{\label{tab:org7c74a6f}
+\caption{\label{tab:org4e7ea70}
 Results}
 \centering
 \begin{tabular}{lrrrr}
@@ -345,15 +345,15 @@ thus, we fail to reject the null hypothesis and
 we cannot claim that the the arrow symbol shows a different distribution than the equality symbol.
 
 \section{Conclusion and Recommendations}
-\label{sec:org90c0c9d}
+\label{sec:org7d9c94a}
 
 \subsection{Conclusion}
-\label{sec:orgc3a0278}
-The claims by \cite{dehnadi2006camel} that different paradigms in has not been disproven by this research.
-Despite using a more comprehensible symbol, the distribution remains the same.
+\label{sec:orgf6bf92e}
+The claims by \cite{dehnadi2006camel} that different paradigms are ineffictive for education has not been disproven by this research because
+despite using a more comprehensible symbol, the distribution remains the same.
 
 \subsection{Recommendations}
-\label{sec:org5bd515e}
+\label{sec:orgbff1e7f}
 The sample size in this study was greatly reduced due to external factors. 
 A more rigorous data collection is thus adviced, amongst other things.
 Furthermore, following the footsteps of \cite{dehnadi2006camel}, 
@@ -366,12 +366,12 @@ verify their claims of bimodality.
 \addcontentsline{toc}{section}{References}
 
 \section{Appendices}
-\label{sec:orgb5d6273}
+\label{sec:orgdac546c}
 \subsection{Appendix A}
-\label{sec:orgf107c97}
+\label{sec:org6a8f1f8}
 \includepdf[pages=-,pagecommand={},width=\textwidth]{exam.pdf}
 
 \subsection{Appendix B}
-\label{sec:orgc1ee00a}
+\label{sec:org8500dc1}
 \includepdf[pages=-,pagecommand={},width=\textwidth]{exam2.pdf}
 \end{document}
