--- a/Research.org
+++ b/Research.org
@@ -383,9 +383,9 @@ type annotations and the replacement of the equality symbol with the arrow symbo
 |---------------------+------------+--------------+-------+-------|
 |                     | Consistent | Inconsistent | Blank | Total |
 |---------------------+------------+--------------+-------+-------|
-| Equality symbol (=) |          2 |           15 |    14 |    31 |
-| Arrow symbol (<-)   |          2 |           12 |    14 |    28 |
-| Total               |          4 |           27 |    28 |    59 |
+| Equality symbol (=) |          3 |           17 |    17 |    37 |
+| Arrow symbol (<-)   |          2 |           14 |    17 |    33 |
+| Total               |          5 |           31 |    34 |    70 |
 |---------------------+------------+--------------+-------+-------|
 |---------------------+------------+--------------+-------+-------|
 Although 101 consistency tests were sent out, only 37 were returned, and furthermore,
@@ -397,7 +397,7 @@ the results of this study are far from definitive.
 The alpha value of the subsequent statements are to be taken as 0.05.
 
 Treating the data with Fisher's exact test of independence shows that 
-the independence between equality symbol (=) and the arrow symbol (<-) have a p-value of 0.9185,
+the independence between equality symbol (=) and the arrow symbol (<-) have a p-value of 0.9339,
 thus, failing to reject the null hypothesis which implies that
 the study cannot claim that the the arrow symbol shows a different distribution than the equality symbol.
 
@@ -406,7 +406,7 @@ the blank group is removed and
 once again the data is treated with Fisher's exact test of independence; the p-value gives an even higher value of 1.
 With the same limitation, another assumption is added -- the arrow symbol is more comprehensive;
 a one-tailed Fisher's test of independence is attempted,
-testing that the true odds ratio is less than 1 gives a p-value of 0.6218,
+testing that the true odds ratio is less than 1 gives a p-value of 0.7532,
 however, it still remains to be higher than our alpha value of 0.05.
 
 All the treatment that had been performed points to being unable to reject the null hypothesis.
@@ -437,7 +437,7 @@ verify their claims of bimodality.
 
 However, against the instructions of cite:dehnadi2006camel,
 the researchers suggest giving in-depth instructions on the operational semantics of the symbols as
-the researchers conjecture that this would result in a more even statistics between consistent and inconsistent groups.
+the researchers believe that this would result in a more even statistics between consistent and inconsistent groups.
 
 #+LATEX: \raggedright
 #+LATEX: \clearpage
